--- a/style.css
+++ b/style.css
@@ -53,11 +53,16 @@ body{
 }
                 /* MY PROFILE PHOTO */
 /*........................................ */
+#MYPHOTO_container{
+    /* background-color: #04AA6D; */
+    width: 20%;
+
+}
 .profile_container #MYPHOTO{
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    margin: 20px 0 0 40px;
+    margin: 10px 0 0 40px;
 }
 .profile_container #MYPHOTO:hover{
     border-radius: 50%;
@@ -151,7 +156,7 @@ body{
 }
 
 
-/* THIS IS MY INTRO PARAGRAPHS*/
+            /* THIS IS MY INTRO PARAGRAPHS*/
 /* ...................................................... */
 .BODY_CONTAINER #discription{
     height: auto;
@@ -191,7 +196,7 @@ body{
     line-height: 20px;
 }
 
-/* THIS IS THE FOOTER SECTION WITH MYLINKS ICONS*/
+        /* THIS IS THE FOOTER SECTION WITH MYLINKS ICONS*/
 /* ...................................................... */
 .footer{
    margin: 85px 0 0 0;
@@ -223,7 +228,7 @@ body{
 
 
 
-/* THIS IS THE STYLING FOR MY CONTACT FORM */
+           /* THIS IS THE STYLING FOR MY CONTACT FORM */
 /* ...................................................... */
  
 input[type=text], select, textarea {
@@ -234,7 +239,8 @@ input[type=text], select, textarea {
     margin-bottom: 16px;
     resize: vertical;
     border-radius: 10px;
-  } 
+}
+
   input[type=submit] {
     background-color: #04AA6D;
     color: white;
@@ -243,14 +249,21 @@ input[type=text], select, textarea {
     cursor: pointer;
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
-  }
+}
   
-  input[type=submit]:hover {
+input[type=submit]:hover {
     background-color: #ffe600;
     color: black;
-  }
+}
+
+/* styling the lable elements */
+label{
+    color: rgb(255, 238, 0);
+}
+
   
-  /* STYLING {CONTACT FORM}  CONTAINER*/
+                /* STYLING {CONTACT FORM}  CONTAINER*/
+/* .................................................... */
 .FORM_container{
     display: none;
     border-radius: 5px;
@@ -271,8 +284,8 @@ input[type=text], select, textarea {
 }
 
 
-/* THIS IS MY PROJECT STYLING SECTION */
-
+            /* THIS IS MY PROJECT STYLING SECTION */
+/* ........................................................... */
 /* THIS IS THE DARK BACKGROUND BEHIND MY PROJECT CARDS */
 .PROJECT-PARENT-container{
     z-index: 4;
@@ -300,12 +313,10 @@ input[type=text], select, textarea {
     border-radius: 5%;
     overflow: hidden;
     margin: 20px auto 50px auto;
-    
-
 }
 
-/* EXIT X ON PROJECT CONTAINER */
-
+                    /* EXIT X ON PROJECT CONTAINER */
+/* ........................................................ */
 #projectReturnIXiconContainer {
 height: 40px;
 width: 100%;
@@ -320,7 +331,6 @@ top: 0;
 
 }
 
-
 #projectReturnIXiconContainer #projectReturnIXicon{
     color: white;
     cursor: pointer;
@@ -332,96 +342,117 @@ top: 0;
 height: 200px;
 width: 100%;
 }
-       
-       /* FIRST ROW */
-       .FIRSTrow{
-           display: flex;
-           flex-direction: row;
-           justify-content: space-between;
-           padding: 0 15px 5px 15px;
-       }
-       /* SECOND ROW */
-       .SECONDrow{
-           display: flex;
-           flex-direction: column;
-           padding: 0 0 0 20px;
-       }
-       /* (H1 TAGS) WITHIN THE CARD  */
-       .projectsMainContainer h1{
-           font-size: smaller;
-           margin: 20px 0 0 0; 
-           font-weight: 100;
-           font-family:Verdana, Geneva, Tahoma, sans-serif ;
-           color: rgba(0, 0, 0, 0.678);
-       }
-       /* (P ELEMENTS) FOR THE CARD */
-       .projectsMainContainer h2{
-           font-size: small;
-           color: rgba(0, 0, 0, 0.678);
-       }
-       
-       
-       /* media quiry for my cards */
-       @media screen and (max-width: 600px) {
-           body {
-             background-color: rgb(255, 255, 255);
-             margin: 20;
-             height: 100vh;
-             width: 100vw
-           }
-       
-           .projectsMainContainer{
-               height: 70%;
-               width: 80%;
-               display: flex;
-               flex-direction: column;
-               padding-top: 50px;
-               border-radius: 20px;
-           }
-       
-           
-       /* FIRST ROW */
-       .FIRSTrow{
-           display: flex;
-           flex-direction: column;
-           /* justify-content: space-between; */
-           /* padding: 0 15px 5px 15px; */
-           margin: 50px 0 0 0;
-       }
-       
-       .projectsMainContainer h2{
-           font-size: small;
-           margin: 25px 0 0 0;
-           color: rgba(0, 0, 0, 0.719);
-       }
-       }
 
-
-
-/* styling the lable elements */
-label{
-    color: rgb(255, 238, 0);
+                    /* PROJECTS SECTION AND CONTAINER */
+/*.......................................................  */
+/* FIRST ROW */
+.FIRSTrow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 15px 5px 15px;
+}
+/* SECOND ROW */
+.SECONDrow{
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 0 20px;
+}
+/* (H1 TAGS) WITHIN THE CARD  */
+.projectsMainContainer h1{
+    font-size: smaller;
+    margin: 20px 0 0 0; 
+    font-weight: 100;
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    color: rgba(0, 0, 0, 0.678);
+}
+/* (P ELEMENTS) FOR THE CARD */
+.projectsMainContainer h2{
+    font-size: small;
+    color: rgba(0, 0, 0, 0.678);
 }
 
+/* PROJECT MAIN CONTAINER */
+.projectsMainContainer{
+    height: 70%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    border-radius: 20px;
+}
+       
+           
+/* FIRST ROW */
+.FIRSTrow{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* padding: 0 15px 5px 15px; */
+    margin: 50px 0 0 0;
+}
+
+.projectsMainContainer h2{
+    font-size: small;
+    margin: 25px 0 0 0;
+    color: rgba(0, 0, 0, 0.719);
+}
+       
+
+
+                    /* RESPONSIVE SECTION */
+/* ..................................................... */
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
 
-    .FIRST-Contsiner{
-        padding: 0;
+    body{
+        /* margin: 20px; */
+        
     }
 
-    .profile_container{
+    .FIRST-Contsiner{
+        height: fit-content;
+        background-color: #000000c5;
+    }
 
+    /* TOP NAVIGATION BAR CONTAINER */
+    .Project_Container{
+        height: auto;
+    }
+    .profile_container{
+        display: flex;
+        justify-content: flex-start;
+        height: auto;align-items: center;
+        align-items: flex-start;
+        /* margin: 20px 0 0 0; */
+        /* background-color: #000000; */
+    }
+    /* TOP NAVAGATION IMAGE */
+    #MYPHOTO_container {
+        /* background-color: #04AA6D; */
+        width: fit-content;
+        
+        
+    }
+    #MYPHOTO_container #MYPHOTO{
+        height: 100px;
+        width: 100px;
+        margin: 0 0 0 0;
+        
+    }
+
+    .profile_container ul{
+        display: flex;
+        flex-direction: column;
+        margin:  0 0 0 50px;
     }
 
      .BODY_CONTAINER{
-        /* background-color: #04AA6D; */
         display: flex;
         flex-direction: column;
-        padding: 0;
-        /* width: 100%; */
-        
+        width: 100%;
+        /* background-color: #04AA6D; */
     }
 
     #hello-message-container{
@@ -429,13 +460,36 @@ label{
 
     }
 
+    .BODY_CONTAINER #discription{
+        margin-top: 20px;
+    }
+
     .footer ul{
         width: 100%;
+        padding: 0;
+        background-color: #5e5d5dc0;
+    }
 
+    .footer{
+       
     }
 
     .column, input[type=submit] {
-          width: 100%;
-          margin-top: 0;
-        }
-    } 
+    width: 100%;
+    margin-top: 0;
+    }
+} 
+
+
+
+                /* MEDIA QUERY FOR MY PROJECTS CARDS */
+/* .......................................................... */
+@media screen and (max-width: 600px) {
+
+/* body {
+background-color: rgb(255, 255, 255);
+/* margin: 20; */
+height: 100vh;
+width: 100vw
+} */
+}
