--- a/style.css
+++ b/style.css
@@ -78,8 +78,7 @@ body{
     position: relative;
     transition: 1s;
     border: 2px solid yellow;
-
-    
+ 
 }
 
                 /* HEADER TOP NAVIGATION BAR  */
@@ -311,37 +310,33 @@ label{
 /* ........................................................... */
 /* THIS IS THE DARK BACKGROUND BEHIND MY PROJECT CARDS */
 .PROJECT-PARENT-container{
-    z-index: 4;
     position: absolute;
-    top: 0;
-    background-color: #020000f1;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100vw;
     height:auto;
-    display: none;
 }
 
 /* (MAIN CONTAINER) FOR THE CARD */
 .projectsMainContainer{
+    box-sizing: border-box;
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    height: 500px;
-    width: 40%;
-    padding: 10px 10px 20px 10px;
-    box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.349);
-    border-radius: 5%;
-    overflow: hidden;
+    height: AUTO;
+    width: 400px;
+    padding: 10px;
+    border-radius: 10px;
     margin: 20px auto 50px auto;
+    box-shadow: 5px 5px 10px #ffffff6e;
 }
 
                     /* EXIT X ON PROJECT CONTAINER */
 /* ........................................................ */
 #projectReturnIXiconContainer {
-height: 40px;
+height: 40;
 width: 100%;
 background-color: #000000;
 text-align: center;
@@ -361,9 +356,15 @@ top: 0;
 }
 
 /*REMEMBER TO STYLE THE IMAGE CONTAINER */
-#projectIMAGE img{
-height: 200px;
+#projectIMAGE{
+overflow: hidden;
 width: 100%;
+/* height: 150PX; */
+}
+
+#projectIMAGE img{
+   width: 380px;
+   height: 250px;
 }
 
                     /* PROJECTS SECTION AND CONTAINER */
@@ -379,47 +380,45 @@ width: 100%;
 .SECONDrow{
     display: flex;
     flex-direction: column;
-    padding: 0 0 0 20px;
+    padding: 0 0 0 0;
+    margin: 0 0 10px 15px;
+    /* background-color: #04AA6D; */
 }
+
 /* (H1 TAGS) WITHIN THE CARD  */
 .projectsMainContainer h1{
     font-size: smaller;
-    margin: 20px 0 0 0; 
+    margin: 10px 0 0 0; 
     font-weight: 100;
     font-family:Verdana, Geneva, Tahoma, sans-serif ;
     color: rgba(0, 0, 0, 0.678);
 }
 /* (P ELEMENTS) FOR THE CARD */
 .projectsMainContainer h2{
-    font-size: small;
-    color: rgba(0, 0, 0, 0.678);
-}
-
-/* PROJECT MAIN CONTAINER */
-.projectsMainContainer{
-    height: 70%;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    padding-top: 50px;
-    border-radius: 20px;
-}
-       
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.596);
+    text-align: center;
+    /* display: block; */
+    width: 60px;
+    font-family: 'Arial thin', Arial, sans-serif;
+    text-wrap: nowrap;
+}  
            
 /* FIRST ROW */
 .FIRSTrow{
     display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    /* padding: 0 15px 5px 15px; */
-    margin: 50px 0 0 0;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 15px 5px 15px;
+    margin: 0 0 0 0;
+    text-align: center;
+} 
+
+.projectsMainContainer p{
+    padding: 0;
+    margin: 5px 0 0 0;
 }
 
-.projectsMainContainer h2{
-    font-size: small;
-    margin: 25px 0 0 0;
-    color: rgba(0, 0, 0, 0.719);
-}
        
 
 
