--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ body{
         /* THIS IS THE FOOTER SECTION WITH MYLINKS ICONS*/
 /* ...................................................... */
 .footer{
-   margin: 8px 0 0 0;
+   /* margin: 8px 0 0 0; */
    background-color: rgba(59, 58, 58, 0.418);
 
 }
@@ -317,6 +317,7 @@ label{
     justify-content: center;
     width: 100vw;
     height:auto;
+    display: none;
 }
 
 /* (MAIN CONTAINER) FOR THE CARD */
@@ -422,169 +423,4 @@ width: 100%;
        
 
 
-                    /* RESPONSIVE SECTION */
-/* ..................................................... */
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-
-    *{
-        box-sizing: border-box;
-    }
-
-    .FIRST-Contsiner{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-    }
-
-    .FIRST-Contsiner{
-        height: 100%;
-        background-color: #000000c5;
-        width: 100%;
-    }
-
-    /* TOP NAVIGATION BAR CONTAINER */
-    
-    .profile_container{
-        display: flex;
-        justify-content: flex-start;
-        height: auto;align-items: center;
-        align-items: flex-start;
-        /* margin: 20px 0 0 0; */
-        /* background-color: #000000; */
-    }
-    /* TOP NAVAGATION IMAGE */
-    #MYPHOTO_container {
-        /* background-color: #04AA6D; */
-        width: fit-content;
-        
-        
-    }
-    #MYPHOTO_container #MYPHOTO{
-        height: 100px;
-        width: 100px;
-        margin: 0 0 0 0;
-        
-    }
-
-    .profile_container ul{
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        margin:  0 0 0 0;
-        align-items: center;
-       
-    }
-
-     .BODY_CONTAINER{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        /* background-color: #04AA6D; */
-    }
-
-    #hello-message-container{
-       margin: 0 0 10px 0;
-
-    }
-
-    .PARENT-DISCRIPTION{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .BODY_CONTAINER #discription{
-        margin-top: 40px ;
-        height: fit-content;
-        padding: 10px;
-    }
-
-    .footer ul{
-        width: 100%;
-        padding: 0;
-        background-color: #5e5d5dc0;
-        margin: 0;
-    }
-
-    .footer{
-       
-    }
-
-    .column, input[type=submit] {
-    width: 100%;
-    margin-top: 30px;
-    }
-} 
-
-
-/* MEDIA QUERY FOR TABLETS  */
-/* ................................................................................... */
-/* On screens that are 992px or less, set the background color to blue */
-@media screen and (max-width: 1000px) {
-    .Project_Container{
-        /* display: none; */
-    }
-
-    *{
-        box-sizing: border-box;
-    }
-
-    .BODY_CONTAINER{
-        display: flex;
-        flex-direction: column;
-        /* padding: 0; */
-        width: 100%;
-    }
-
-    .FIRST-Contsiner{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-
-    #hello-message-container{
-        height: fit-content;
-        width: 100%;
-    }
-
-    .BODY_CONTAINER #hello-message-container> *:nth-child(4){
-        /* color: #000000; */
-        font-size: 25px;
-        font-weight: 100; 
-        font-stretch: expanded;
-        display: block;
-        margin: 15px;
-    }
-
-
-    .BODY_CONTAINER #hello-message-container > *:nth-child(4) {
-        line-height: 1px;
-        display: block;
-        line-height: 0px;
-        margin: 0;
-        font-size: 25px;
-        font-weight: 100;
-        letter-spacing: 8px; 
-        font-stretch: expanded;
-        
-    }
-
-    .PARENT-DISCRIPTION{
-        display: flex;
-        width: 100%;
-        margin-top: 10px;
-        justify-content: space-between;
-    }
-    .PARENT-DISCRIPTION #discription{
-       margin: 20px 0 0 0;
-    }
-
-    #hello-message-container #SHAW{
-        font-size: 140px;
-    }
-
-
-  }
