--- a/PROJECT_Style.css
+++ b/PROJECT_Style.css
@@ -21,6 +21,7 @@ body{
 
 .projectsMainContainer{
   background-color: rgba(17, 15, 39, 0.904);
+  height: fit-content;
 }
 
 .Home_section{
@@ -45,7 +46,7 @@ body{
 .Home_section i:hover{ 
  font-size: x-large;
  color: rgba(255, 238, 0, 0.932);
- border: 1px solid rgb(0, 0, 0);
+ border: 1px solid black;
  border-radius: 10px;
 }
 
@@ -97,6 +98,17 @@ body{
       position: relative;
     }
 
+    .projectIMAGE i{
+        height: 50px;
+        width: 60px;
+        position: absolute;
+        top: 40%;
+        left: 40%;
+        transform: translate(-50% -50%);
+        font-size: 50px;
+        color: #aaa150;
+        
+    }
 
     .projectIMAGE img{
         width: 100%;
@@ -117,7 +129,6 @@ body{
     .PROJECT_container div p{  
               font-size: small;
         color: rgba(0, 0, 0, 0.747);
-
     }
 
     .PROJECT_container #left{
